feat: Implement multi-step KYC validation process with ID validation, OTP verification, and live photo capture
- Added VisitorKycService for handling KYC-related API calls.
- Enhanced VisitorRegisterComponent to manage multi-step KYC flow.
- Created VisitorKycController for backend KYC validation endpoints.
- Introduced SQL migration for new KYC fields in the database.
- Updated frontend styles for KYC components including stepper and info boxes.
- Implemented camera functionality for live photo capture during registration.
- Added input sanitization and form reset functionality.